--- a/RobotArmNoSPI/RobotArmNoSPI.ioc
+++ b/RobotArmNoSPI/RobotArmNoSPI.ioc
@@ -10,27 +10,52 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IP4=USB_DEVICE
-Mcu.IP5=USB_OTG_FS
-Mcu.IPNb=6
+Mcu.IP3=TIM1
+Mcu.IP4=TIM2
+Mcu.IP5=USB_DEVICE
+Mcu.IP6=USB_OTG_FS
+Mcu.IPNb=7
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
-Mcu.Pin0=PH0-OSC_IN
-Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin3=PA4
-Mcu.Pin4=PA5
-Mcu.Pin5=PA7
-Mcu.Pin6=PC4
-Mcu.Pin7=PB12
-Mcu.Pin8=PA11
-Mcu.Pin9=PA12
-Mcu.PinsNb=14
+Mcu.Pin0=PC13-ANTI_TAMP
+Mcu.Pin1=PH0-OSC_IN
+Mcu.Pin10=PA3
+Mcu.Pin11=PA4
+Mcu.Pin12=PA5
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PB2
+Mcu.Pin19=PB10
+Mcu.Pin2=PH1-OSC_OUT
+Mcu.Pin20=PB11
+Mcu.Pin21=PB12
+Mcu.Pin22=PB13
+Mcu.Pin23=PB14
+Mcu.Pin24=PB15
+Mcu.Pin25=PC6
+Mcu.Pin26=PC7
+Mcu.Pin27=PC8
+Mcu.Pin28=PC9
+Mcu.Pin29=PA8
+Mcu.Pin3=PC0
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PA11
+Mcu.Pin33=PA12
+Mcu.Pin34=PA13
+Mcu.Pin35=PA14
+Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin37=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin4=PC1
+Mcu.Pin5=PC2
+Mcu.Pin6=PC3
+Mcu.Pin7=PA0-WKUP
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -53,6 +78,12 @@ PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=STEP1
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=STEP2
+PA1.Signal=S_TIM2_CH2
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=STEP7
+PA10.Signal=S_TIM1_CH3
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
@@ -61,10 +92,17 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.GPIOParameters=PinState,GPIO_Label
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=STEP3
+PA2.Signal=S_TIM2_CH3
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=STEP4
+PA3.Signal=S_TIM2_CH4
+PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PA4.GPIO_Label=ENABLE1
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA4.Locked=true
-PA4.PinState=GPIO_PIN_RESET
+PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=HYSTERESIS
@@ -75,15 +113,99 @@ PA7.GPIO_Label=MICROSTEPP
 PA7.Locked=true
 PA7.PinState=GPIO_PIN_RESET
 PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=STEP5
+PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=STEP6
+PA9.Signal=S_TIM1_CH2
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=CSN3
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=CSN4
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=CSN6
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=CSN7
+PB11.Locked=true
+PB11.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=DIR1
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=DIR2
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=DIR3
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=DIR4
+PB15.Locked=true
+PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=CSN5
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PC0.GPIOParameters=PinState,GPIO_Label
+PC0.GPIO_Label=ENABLE6
+PC0.Locked=true
+PC0.PinState=GPIO_PIN_SET
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=PinState,GPIO_Label
+PC1.GPIO_Label=ENABLE5
+PC1.Locked=true
+PC1.PinState=GPIO_PIN_SET
+PC1.Signal=GPIO_Output
+PC13-ANTI_TAMP.GPIOParameters=PinState,GPIO_Label
+PC13-ANTI_TAMP.GPIO_Label=ENABLE7
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.PinState=GPIO_PIN_SET
+PC13-ANTI_TAMP.Signal=GPIO_Output
+PC2.GPIOParameters=PinState,GPIO_Label
+PC2.GPIO_Label=ENABLE4
+PC2.Locked=true
+PC2.PinState=GPIO_PIN_SET
+PC2.Signal=GPIO_Output
+PC3.GPIOParameters=PinState,GPIO_Label
+PC3.GPIO_Label=ENABLE3
+PC3.Locked=true
+PC3.PinState=GPIO_PIN_SET
+PC3.Signal=GPIO_Output
 PC4.GPIOParameters=PinState,GPIO_Label
 PC4.GPIO_Label=CSN1
 PC4.Locked=true
 PC4.PinState=GPIO_PIN_RESET
 PC4.Signal=GPIO_Output
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=CSN2
+PC5.Locked=true
+PC5.Signal=GPIO_Output
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=DIR5
+PC6.Locked=true
+PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=DIR6
+PC7.Locked=true
+PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=DIR7
+PC8.Locked=true
+PC8.Signal=GPIO_Output
+PC9.GPIOParameters=PinState,GPIO_Label
+PC9.GPIO_Label=ENABLE2
+PC9.Locked=true
+PC9.PinState=GPIO_PIN_SET
+PC9.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -119,7 +241,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -152,10 +274,29 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=192000000
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
+SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 TIM2.Period=77
 TIM2.Prescaler=6
 TIM2.Pulse-PWM\ Generation1\ CH1=77/2
